# MailMaven

./: .env  .gitignore  Cargo.toml  README.md  configuration.yaml  dummy.yaml
.sqlx/: query-e6856b45a376bc6bf05b0380126152dde73a52fa1e5697fd022dabc31f7b5a2b.json
migrations/: 20240123140953_status_not_null_in_subscriptions.sql  20240129074114_create_table_users.sql  20240204090058_add_seed_user.sql  20240207084201_create_idempotency_table.sql
scripts/: db_restart.sh
src/: auth.rs  config.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/auth/: middleware.rs  mod.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: health_check.rs
