[package]
name = "email-newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
serde = {"version"= "1.0.195", features=["derive"]}
serde_yaml = "0.9.30"
sqlx = {version = "0.7.3", default-features = false, features = ["postgres", "runtime-tokio-rustls", "macros","uuid", "chrono", "migrate"]}
uuid = { version = "1.7.0", features = ["v4"] }
chrono = "0.4.31"
tokio = {"version"= "1.35.1", features=["full"]}
tracing = {version = "0.1.40", features = ["log"]}
tracing-subscriber = {version = "0.3.18", features = ["env-filter", "registry"]}
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
