[package]
name = "email-newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
serde = { "version" = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
sqlx = { version = "0.7.3", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = "0.4.31"
tokio = { "version" = "1.35.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "registry",
] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.9"
unicode-segmentation = "1.10.1"
validator = "0.16.1"
reqwest = { version = "0.11.23", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.56"
anyhow = "1.0.79"
base64 = "0.21.7"
argon2 = { version = "0.5.3", features = ["std"] }
urlencoding = "2.1.3"
hmac = { version = "0.12.1", features = ["std"] }
sha2 = "0.10.8"
hex = "0.4.3"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
actix-session = { version = "0.9.0", features = ["redis-rs-tls-session"] }
serde_json = "1.0.111"
actix-web-lab = "0.20.2"


[dev-dependencies]
claim = "0.5.0"
fake = "2.9.2"
rand = "0.8.5"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tokio = { version = "1.35.1", features = ["rt", "macros"] }
wiremock = "0.5.22"
serde_json = "1.0.111"
